--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,10 @@
         <!--<spring.cloud.version>Finchley.M1</spring.cloud.version>-->
         <spring.cloud.version>Greenwich.SR3</spring.cloud.version>
         <spring.boot.version>2.2.1.RELEASE</spring.boot.version>
-        <swagger.version>2.8.0</swagger.version>
+        <swagger.version>2.9.2</swagger.version>
         <apache.commons.lang3.version>3.7</apache.commons.lang3.version>
         <apache.commons.io.version>2.6</apache.commons.io.version>
-        <fastjson.version>1.2.47</fastjson.version>
+        <fastjson.version>1.2.62</fastjson.version>
         <logback.version>1.2.3</logback.version>
     </properties>
 
@@ -156,6 +156,12 @@
 
 
             <!-- db mybatis -->
+            <!--<dependency>-->
+                <!--<groupId>com.baomidou</groupId>-->
+                <!--<artifactId>mybatis-plus-boot-starter</artifactId>-->
+                <!--<version>3.2.0</version>-->
+            <!--</dependency>-->
+
             <dependency>
                 <groupId>org.mybatis</groupId>
                 <artifactId>mybatis</artifactId>
@@ -164,19 +170,19 @@
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
-                <version>1.3.2</version>
+                <version>2.1.1</version>
             </dependency>
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>8.0.11</version>
+                <version>8.0.18</version>
             </dependency>
 
             <!-- zookeeper 模块 -->
             <dependency>
                 <groupId>org.apache.zookeeper</groupId>
                 <artifactId>zookeeper</artifactId>
-                <version>3.4.14</version>
+                <version>3.5.6</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.slf4j</groupId>
