--- a/soc-spring-boot-service/pom.xml
+++ b/soc-spring-boot-service/pom.xml
@@ -49,6 +49,12 @@
 
 
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+
+
 
         <!-- logback -->
         <dependency>
