--- a/soc-spring-boot-web/src/main/resources/application-local.yml
+++ b/soc-spring-boot-web/src/main/resources/application-local.yml
@@ -5,7 +5,7 @@ spring:
     hikari:
       jdbc-url: jdbc:mysql://127.0.0.1:3306/soc_spring_boot_example?useUnicode=true&characterEncoding=UTF-8&useSSL=false&transformedBitIsBoolean=true&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
       username: root
-      password: mysqlpw
+      password: Mysql123
       driver-class-name: com.mysql.cj.jdbc.Driver
       maximum-pool-size: 15
       pool-name: ${pro.name}-db
@@ -24,6 +24,21 @@ spring:
         max-wait: -1ms
         min-idle: 2
 
+
+#mybatis plus 设置
+mybatis-plus:
+  mapper-locations: classpath*:com/treeyh/example/springboot/dao/**/xml/*Mapper.xml
+  global-config:
+    # 关闭MP3.0自带的banner
+    banner: false
+    db-config:
+      #主键类型  0:"数据库ID自增",1:"该类型为未设置主键类型", 2:"用户输入ID",3:"全局唯一ID (数字类型唯一ID)", 4:"全局唯一ID UUID",5:"字符串全局唯一ID (idWorker 的字符串表示)";
+      id-type: 4
+      # 默认数据库表下划线命名
+      table-underline: true
+    #configuration:
+    # 这个配置会将执行的sql打印出来，在开发或测试的时候可以用
+    #log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 
 logging:
