--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,9 @@
         <!-- 引用版本号 -->
         <soc.common.version>1.0-SNAPSHOT</soc.common.version>
         <!--<spring.cloud.version>Finchley.M1</spring.cloud.version>-->
-        <spring.cloud.version>Greenwich.SR3</spring.cloud.version>
-        <spring.boot.version>2.2.1.RELEASE</spring.boot.version>
+
+        <spring.cloud-version>Hoxton.SR8</spring.cloud-version>
+        <spring.boot.version>2.3.4.RELEASE</spring.boot.version>
         <swagger.version>2.9.2</swagger.version>
         <apache.commons.lang3.version>3.7</apache.commons.lang3.version>
         <apache.commons.io.version>2.6</apache.commons.io.version>
@@ -55,6 +56,7 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
 
             <!-- redis cache -->
             <dependency>
@@ -158,26 +160,26 @@
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
-                <version>3.2.0</version>
+                <version>3.4.0</version>
             </dependency>
 
-            <!-- db mybatis 代码生成 -->
-            <dependency>
-                <groupId>com.baomidou</groupId>
-                <artifactId>mybatis-plus-generator</artifactId>
-                <version>3.3.0</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.velocity</groupId>
-                <artifactId>velocity-engine-core</artifactId>
-                <version>2.1</version>
-            </dependency>
-            <!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
-            <dependency>
-                <groupId>org.freemarker</groupId>
-                <artifactId>freemarker</artifactId>
-                <version>2.3.29</version>
-            </dependency>
+<!--            &lt;!&ndash; db mybatis 代码生成 &ndash;&gt;-->
+<!--            <dependency>-->
+<!--                <groupId>com.baomidou</groupId>-->
+<!--                <artifactId>mybatis-plus-generator</artifactId>-->
+<!--                <version>3.4.0</version>-->
+<!--            </dependency>-->
+<!--            <dependency>-->
+<!--                <groupId>org.apache.velocity</groupId>-->
+<!--                <artifactId>velocity-engine-core</artifactId>-->
+<!--                <version>2.1</version>-->
+<!--            </dependency>-->
+<!--            &lt;!&ndash; https://mvnrepository.com/artifact/org.freemarker/freemarker &ndash;&gt;-->
+<!--            <dependency>-->
+<!--                <groupId>org.freemarker</groupId>-->
+<!--                <artifactId>freemarker</artifactId>-->
+<!--                <version>2.3.29</version>-->
+<!--            </dependency>-->
 
 
 
@@ -185,12 +187,12 @@
             <dependency>
                 <groupId>org.mybatis</groupId>
                 <artifactId>mybatis</artifactId>
-                <version>3.4.6</version>
+                <version>3.5.6</version>
             </dependency>
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
-                <version>2.1.1</version>
+                <version>2.1.3</version>
             </dependency>
             <dependency>
                 <groupId>mysql</groupId>
